--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,42 +1,32 @@
-# Java Gradle CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-java/ for more details
-#
-version: 2
+version: 2.1
+
+orbs:
+  maven: circleci/maven@1.0.0
+
 jobs:
-  build:
+  generate_javadoc:
+    working_directory: ~/ing-sw-2020-Riva-Sanvito-Truong
+
     docker:
-      # specify the version you desire here
-      - image: circleci/openjdk:8-jdk
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    working_directory: ~/repo
-
-    environment:
-      # Customize the JVM maximum heap limit
-      JVM_OPTS: -Xmx3200m
-      TERM: dumb
+      - image: circleci/openjdk:13-jdk-buster
 
     steps:
       - checkout
+      - run:
+          name: Generate javadoc
+          command: |
+            javadoc \
+              -sourcepath src\main\java \
+              -d javadoc \
+              -private \
+              -subpackages \
+              it.polimi.ingsw
+      - store_artifacts:
+          path: javadoc
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "build.gradle" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
-      - run: gradle dependencies
-
-      - save_cache:
-          paths:
-            - ~/.gradle
-          key: v1-dependencies-{{ checksum "build.gradle" }}
-
-      # run tests!
-      - run: gradle test
+workflows:
+  master_push:
+    jobs:
+      - generate_javadoc
+#      - maven/test:
+#          command: '-X verify'
