--- a/config/global.properties
+++ b/config/global.properties
@@ -6,5 +6,5 @@ maxBuildHeight = 3
 completeTowerHeight = 4
 victoryHeight = 3
 boardSize = 5
-boardXSize = 5
-boardYSize = 5
+minPlayerCount = 2
+maxPlayerCount = 3
