fix: fix misspell of property

--- a/config/global.properties
+++ b/config/global.properties
@@ -6,5 +6,5 @@ maxBuildHeight = 3
 completeTowerHeight = 4
 victoryHeight = 3
 boardSize = 5
-minPlayerPerGame = 2
-maxPlayerPerGame = 3
+minPlayersPerGame = 2
+maxPlayersPerGame = 3
