--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
       <artifactId>jansi</artifactId>
       <version>1.18</version>
     </dependency>
+    <dependency>
+      <groupId>org.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+      <version>4.0.2</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
