ci: resolve Maven dependencies

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,16 @@ jobs:
       - add_ssh_keys:
           fingerprints:
             - "85:53:74:17:3d:df:9e:92:91:97:95:3e:96:09:c5:ec"
+      - restore_cache: # restore the saved cache after the first run or if `pom.xml` has changed
+          # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
+          key: circleci-{{ checksum "pom.xml" }}
+      - run:
+          name: Resolve Maven dependencies
+          command: mvn dependency:go-offline # gets the project dependencies
+      - save_cache: # saves the project dependencies
+          paths:
+            - ~/.m2
+          key: circleci-{{ checksum "pom.xml" }}
       - run:
           name: Generate javadoc
           command: |
