--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ jobs:
           name: Generate javadoc
           command: |
             javadoc \
+              -classpath ~/.m2/repository/org/fusesource/jansi/jansi/1.18/jansi-1.18.jar
               -sourcepath src/main/java \
               -d docs/javadoc \
               -private \
