Revert "ci: test next gen docker image" [skip ci]
This reverts commit 3a5e206633e32e308d673c70b5dd14c98fd5ca7b.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     working_directory: ~/ing-sw-2020-Riva-Sanvito-Truong
 
     docker:
-      - image: cimg/openjdk:13.0
+      - image: circleci/openjdk:13-jdk-buster
 
     steps:
       - checkout
