--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,11 +34,7 @@ jobs:
           name: Generate javadoc
           command: |
             javadoc \
-              -classpath ~/.m2/repository/org/fusesource/jansi/jansi/1.18/jansi-1.18.jar \
-              -classpath ~/.m2/repository/org/openjfx/javafx-controls/14/javafx-controls-14.jar \
-              -classpath ~/.m2/repository/org/openjfx/javafx-graphics/14/javafx-graphics-14.jar \
-              -classpath ~/.m2/repository/org/openjfx/javafx-base/14/javafx-base-14.jar \
-              -classpath ~/.m2/repository/org/openjfx/javafx-fxml/14/javafx-fxml-14.jar \
+              -classpath "$(find  ~/.m2/repository -name '*.jar' | tr '\n' ':')" \
               -sourcepath src/main/java \
               -d docs/javadoc \
               -private \
