ci: add sonarqube [sonar]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,16 @@ jobs:
             git add docs/javadoc/*
             git commit -m "docs(javadoc): update javadoc [skip ci]"
             git push --set-upstream origin ${CIRCLE_BRANCH}
+      - run:
+          name: Generate and publish API documentation
+          command: |
+            last_commit="$(git log -1 --pretty=%B | cat | grep sonar)"
 
+            if [[ ${last_commit} == *[sonar]* ]]; then
+              cp .circleci/mvn-settings.xml ~/.m2/settings.xml
+              mvn clean install
+              mvn sonar:sonar "-Dsonar.login=${SONARQUBE_TOKEN}"
+            fi
 workflows:
   version: 2
   master_push:
