chore: clean code and comments

--- a/config/global.properties
+++ b/config/global.properties
@@ -1,11 +1,4 @@
 projectName = Santorini
-version = dev
+version = 1.0.0
 authors = A. Riva, A. Sanvito, K. T. Truong
-buildersPerPlayer = 2
-maxBuildHeight = 3
-completeTowerHeight = 4
-victoryHeight = 3
-boardSize = 5
-minPlayersPerGame = 2
-maxPlayersPerGame = 3
 keepAliveIntervalMs = 15000
