chore: implement sq suggestion

--- a/config/global.properties
+++ b/config/global.properties
@@ -2,3 +2,4 @@ projectName = Santorini
 version = 1.0.0
 authors = A. Riva, A. Sanvito, K. T. Truong
 keepAliveIntervalMs = 15000
+nicknameMaxLength = 30
