--- a/pom.xml
+++ b/pom.xml
@@ -199,7 +199,7 @@
             <artifactId>javafx-maven-plugin</artifactId>
             <version>0.0.4</version>
             <configuration>
-                <mainClass>it.polimi.ingsw.ClientApp</mainClass>
+                <mainClass>it.polimi.ingsw.SantoriniApp</mainClass>
             </configuration>
         </plugin>
         <plugin>
@@ -216,7 +216,7 @@
           <version>2.4.1</version>
           <executions>
             <execution>
-              <id>server</id>
+              <id>santorini</id>
               <phase>package</phase>
               <goals>
                 <goal>shade</goal>
@@ -224,25 +224,10 @@
               <configuration>
                 <transformers>
                   <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                    <mainClass>it.polimi.ingsw.ServerApp</mainClass>
+                    <mainClass>it.polimi.ingsw.SantoriniApp</mainClass>
                   </transformer>
                 </transformers>
-                <finalName>Santorini-Server</finalName>
-              </configuration>
-            </execution>
-            <execution>
-              <id>client</id>
-              <phase>package</phase>
-              <goals>
-                <goal>shade</goal>
-              </goals>
-              <configuration>
-                <transformers>
-                  <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                    <mainClass>it.polimi.ingsw.ClientApp</mainClass>
-                  </transformer>
-                </transformers>
-                <finalName>Santorini-Client</finalName>
+                <finalName>Santorini</finalName>
               </configuration>
             </execution>
           </executions>
